Elastic: Fix text selection with Shift+PageUp and Shift+PageDown in plain text editor when using Chrome (#7230)

--- a/skins/elastic/styles/widgets/editor.less
+++ b/skins/elastic/styles/widgets/editor.less
@@ -467,7 +467,7 @@ div.tox {
         font-family: monospace;
         font-size: 13px;
         width: 100% !important;
-        padding-top: 40px;
+        padding-top: 2.5rem;
         resize: none;
     }
 
